<resources>
    <!--button name-->
    <string name="app_name">Lead Screen</string>
    <string name="choose">Choose a Lead Screening resource</string>
    <string name="whwToScreen">Who, How, When to Screen</string>
    <string name="manageLevels">How to Manage Lead Levels</string>
    <string name="symptoms">Signs/Symptoms Lead Poisoning</string>
    <string name="risksurvey">Lead Exposure Risk Survey</string>
    <string name="evaluation">High Lead Level Evaluation</string>
    <string name="guideline">Differing Guidelines</string>
    <string name="mainscreen">Lead Screen</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="aboutapp">About App</string>
    <string name="reference">References</string>
    <string name="LeadRiskSurvey">Lead Exposure Risk Survey</string>
    <string name="capillary">Capillary Test</string>
    <string name="venous">Venous Test</string>

    <!--TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--content-->
    <string name="selectTestResult">Select the lead level result (ug/dL):</string>

    <!--test result-->
    <string name="five"> &lt; 5</string>
    <string name="nine">5 &#8211; 9</string>
    <string name="onefour">10 &#8211; 14</string>
    <string name="twofour">15 &#8211; 24</string>
    <string name="fourfour">25 &#8211; 44</string>
    <string name="fivenine">45 &#8211; 59</string>
    <string name="sixnine">60 &#8211; 69</string>
    <string name="seventy">&gt;= 70</string>
    <!--alert dialog-->
    <string name="start">The Lead Screening App presents guidance on screening and managing
        childhood lead exposure based upon the New York State Dept. of Health guideline.</string>
    <string name="getStated">Get Started</string>

    <string name="RSlinkI">http://www.cpsc.gov</string>
    <!--<string name="RSlinkI"><a href="http://www.cpsc.gov">www.cpsc.gov</a></string>-->
    <string name="RSlinkII">http://www.cdc.gov/nceh/lead/tips/sources.htm</string>

    <!--<string name="defaultpassword">User Guide <a href="http://www.cleverfinger.com.au/user-guide/">http://www.cleverfinger.com.au/user-guide/</a></string>-->
    <string name="ref1">http://www.health.ny.gov/publications/2501/</string>
    <string name="ref2">http://pediatrics.aappublications.org/content/116/4/1036.full</string>
    <string name="ref3">http://www.cdc.gov/mmwr/preview/mmwrhtml/rr5809a1.htm</string>
    <string name="ref4">http://www.uspreventiveservicestaskforce.org/uspstf06/lead/leadrs.htm</string>
    <string name="ref5">http://www.aafp.org/online/etc/medialib/aafp_org/documents/clinical/CPS/rcps08-2005.Par.0001.File.tmp/May2012.pdf</string>

    <string name="c1">http://health.ny.gov/publications/2526.pdf</string>
    <string name="v1">http://www.health.ny.gov/environmental/lead/exposure/childhood/regional_lead_resource_centers.htm</string>

    <string name="MoreAppTitle">More apps for clinicians by Joshua Steinberg MD</string>
    <string name="PE">Preop Eval</string>
    <string name="GG">GBS Guide</string>
    <string name="AAB">ABG Acid-Base</string>
    <string name="EG">EFM Guide</string>
    <string name="WG">Warfarin Guide</string>
    <string name="BS">Bishop Scores</string>
    <string name="PG">Pneumonia Guide</string>
    <string name="OW">OB Wheels</string>
    <string name="PDDT">PE &amp; DVT dx tool</string>
    <string name="LS">Lead Screen</string>
    <string name="Pe">PFT eval</string>
    <string name="rabies">Rabies</string>
    <string name="GD">Gout Diagnosis</string>
    <string name="DC">Depo calendar</string>
    <string name="HM">Health Maint</string>
    <string name="WP">Which P-vax?</string>
    <string name="contraception">Contraception</string>
    <string name="SBS">Step-by-Step</string>
    <string name="GoToAppStore">Go to Google Play Store</string>
    <string name="moreappclaim">I also keep a list of apps* written by anyone (mostly others) which I recommend for clinicians,
    nurses, residents, and students serving many fields of medicine, especially my home of full-spectrum family medicine. A
    copy is always online here.</string>
    <string name="GoToAppList">Go to Apps List</string>
    <string name="finalstring">* I have no financial relationship or financial benefit from any of these apps, even my own.</string>
</resources>



































