<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.medical.xumeng.leadscreen.MoreApps">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/blue"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
          >

            <TextView
                android:layout_width="@dimen/moreapptitlesize"
                android:layout_height="wrap_content"
                android:text="@string/MoreAppTitle"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/moreappsize" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/moreapps_margin"
                android:layout_marginRight="@dimen/moreapps_margin"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:id="@+id/PE"
                    android:layout_width="@dimen/textwidth"
                    android:layout_height="wrap_content"
                    android:text="@string/PE"
                    android:layout_alignParentStart="true"
                    android:textSize="@dimen/moreapptext1"/>
                <TextView
                    android:id="@+id/GG"
                    android:layout_toEndOf="@+id/PE"
                    android:layout_width="@dimen/textwidth"
                    android:layout_height="wrap_content"
                    android:text="@string/GG"
                    android:textSize="@dimen/moreapptext1"/>
                <TextView
                    android:id="@+id/ABG"
                    android:layout_below="@+id/PE"
                    android:layout_width="@dimen/textwidth"
                    android:layout_height="wrap_content"
                    android:text="@string/AAB"
                    android:textSize="@dimen/moreapptext1"/>
                <TextView
                    android:id="@+id/EG"
                    android:layout_toEndOf="@+id/ABG"
                    android:layout_below="@+id/GG"
                    android:layout_width="@dimen/textwidth"
                    android:layout_height="wrap_content"
                    android:text="@string/EG"
                    android:textSize="@dimen/moreapptext1"/>
                <TextView
                    android:id="@+id/WG"
                    android:layout_below="@+id/ABG"
                    android:layout_width="@dimen/textwidth"
                    android:layout_height="wrap_content"
                    android:text="@string/WG"
                    android:textSize="@dimen/moreapptext1"/>
                <TextView
                    android:id="@+id/BS"
                    android:layout_toEndOf="@+id/WG"
                    android:layout_below="@+id/EG"
                    android:layout_width="@dimen/textwidth"
                    android:layout_height="wrap_content"
                    android:text="@string/BS"
                    android:textSize="@dimen/moreapptext1"/>
                <TextView
                    android:id="@+id/PG"
                    android:layout_below="@+id/WG"
                    android:layout_width="@dimen/textwidth"
                    android:layout_height="wrap_content"
                    android:text="@string/PG"
                    android:textSize="@dimen/moreapptext1"/>
                <TextView
                    android:id="@+id/OW"
                    android:layout_toEndOf="@+id/PG"
                    android:layout_below="@+id/BS"
                    android:layout_width="@dimen/textwidth"
                    android:layout_height="wrap_content"
                    android:text="@string/OW"
                    android:textSize="@dimen/moreapptext1"/>
                <TextView
                    android:id="@+id/LS"
                    android:layout_below="@+id/PG"
                    android:layout_width="@dimen/textwidth"
                    android:layout_height="wrap_content"
                    android:text="@string/LS"
                    android:textSize="@dimen/moreapptext1"/>
                <TextView
                    android:id="@+id/PDDT"
                    android:layout_toEndOf="@+id/LS"
                    android:layout_below="@+id/OW"
                    android:layout_width="@dimen/textwidth"
                    android:layout_height="wrap_content"
                    android:text="@string/PDDT"
                    android:textSize="@dimen/moreapptext1"/>
                <TextView
                    android:id="@+id/Pe"
                    android:layout_below="@+id/LS"
                    android:layout_width="@dimen/textwidth"
                    android:layout_height="wrap_content"
                    android:text="@string/PE"
                    android:textSize="@dimen/moreapptext1"/>
                <TextView
                    android:id="@+id/Rabies"
                    android:layout_toEndOf="@+id/Pe"
                    android:layout_below="@+id/PDDT"
                    android:layout_width="@dimen/textwidth"
                    android:layout_height="wrap_content"
                    android:text="@string/rabies"
                    android:textSize="@dimen/moreapptext1"/>
                <TextView
                    android:id="@+id/GD"
                    android:layout_below="@+id/Pe"
                    android:layout_width="@dimen/textwidth"
                    android:layout_height="wrap_content"
                    android:text="@string/GD"
                    android:textSize="@dimen/moreapptext1"/>
                <TextView
                    android:id="@+id/DC"
                    android:layout_toEndOf="@+id/GD"
                    android:layout_below="@+id/Rabies"
                    android:layout_width="@dimen/textwidth"
                    android:layout_height="wrap_content"
                    android:text="@string/DC"
                    android:textSize="@dimen/moreapptext1"/>
                <TextView
                    android:id="@+id/HM"
                    android:layout_below="@+id/GD"
                    android:layout_width="@dimen/textwidth"
                    android:layout_height="wrap_content"
                    android:text="@string/HM"
                    android:textSize="@dimen/moreapptext1"/>
                <TextView
                    android:id="@+id/WP"
                    android:layout_toEndOf="@+id/HM"
                    android:layout_below="@+id/DC"
                    android:layout_width="@dimen/textwidth"
                    android:layout_height="wrap_content"
                    android:text="@string/WP"
                    android:textSize="@dimen/moreapptext1"/>
                <TextView
                    android:id="@+id/Con"
                    android:layout_below="@+id/HM"
                    android:layout_width="@dimen/textwidth"
                    android:layout_height="wrap_content"
                    android:text="@string/contraception"
                    android:textSize="@dimen/moreapptext1"/>
                <TextView
                    android:id="@+id/SBS"
                    android:layout_toEndOf="@+id/Con"
                    android:layout_below="@+id/WP"
                    android:layout_width="@dimen/textwidth"
                    android:layout_height="wrap_content"
                    android:text="@string/SBS"
                    android:textSize="@dimen/moreapptext1"/>
            </RelativeLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/gotoPlayStore"
                android:backgroundTint="@android:color/white"
                android:text="@string/GoToAppStore"
                android:layout_gravity="center"
                android:gravity="center"
                android:textAllCaps="false"
                android:textSize="@dimen/moreapptext1" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/moreappinfo"
                android:text="@string/moreappclaim"
                android:layout_gravity="center"
                android:gravity="left"
                android:textSize="@dimen/moreapptext1"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/gotoApplist"
                android:backgroundTint="@android:color/white"
                android:text="@string/GoToAppList"
                android:layout_gravity="center"
                android:gravity="center"
                android:textAllCaps="false"
                android:textSize="@dimen/moreapptext1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="left"
                android:text="@string/finalstring"
                android:textSize="@dimen/moreapptext1"/>

        </LinearLayout>
    </ScrollView>


</FrameLayout>

