<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.xumeng.leadscreen.LeadScreen.Levels.Cappilary.CappilaryFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cappilaryText"
            android:text="@string/selectTestResult"
            android:gravity="center_horizontal"
            android:textSize="16sp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fiveug"
            android:text="@string/five"
            android:gravity="left"
            android:layout_below="@+id/cappilaryText"
            android:onClick="onClick"
            android:backgroundTint="@android:color/white"
            android:textAllCaps="false"
            android:textSize="16sp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nineug"
            android:text="@string/nine"
            android:gravity="left"
            android:layout_below="@+id/fiveug"
            android:onClick="onClick"
            android:backgroundTint="@android:color/white"
            android:textAllCaps="false"
            android:textSize="16sp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/onefourug"
            android:text="@string/onefour"
            android:gravity="left"
            android:layout_below="@+id/nineug"
            android:onClick="onClick"
            android:backgroundTint="@android:color/white"
            android:textAllCaps="false"
            android:textSize="16sp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/twofourug"
            android:text="@string/twofour"
            android:gravity="left"
            android:layout_below="@+id/onefourug"
            android:onClick="onClick"
            android:backgroundTint="@android:color/white"
            android:textAllCaps="false"
            android:textSize="16sp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fourfourug"
            android:text="@string/fourfour"
            android:gravity="left"
            android:layout_below="@+id/twofourug"
            android:onClick="onClick"
            android:backgroundTint="@android:color/white"
            android:textAllCaps="false"
            android:textSize="16sp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fivenineug"
            android:text="@string/fivenine"
            android:gravity="left"
            android:layout_below="@+id/fourfourug"
            android:onClick="onClick"
            android:backgroundTint="@android:color/white"
            android:textAllCaps="false"
            android:textSize="16sp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sixnineug"
            android:text="@string/sixnine"
            android:gravity="left"
            android:layout_below="@id/fivenineug"
            android:onClick="onClick"
            android:backgroundTint="@android:color/white"
            android:textAllCaps="false"
            android:textSize="16sp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seventyug"
            android:text="@string/seventy"
            android:gravity="left"
            android:layout_below="@id/sixnineug"
            android:onClick="onClick"
            android:backgroundTint="@android:color/white"
            android:textAllCaps="false"
            android:textSize="16sp"/>

    </RelativeLayout>

</FrameLayout>
